--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@ body {
   background-color: black;
   text-align: center;
   font-family: 'Roboto', sans-serif;
+  padding: 20px;
+  background-image: url("../img/background.png");
 }
 
 .container {
@@ -14,9 +16,10 @@ h1, h2, h3, h4, h5 {
 
 h1 {
   color: white;
-  margin: 20px;
+  margin: 0 0 20px 0;
+  font-weight: bold;
+  font-size: 50px;
 }
-
 
 /* PIZZA ORDER FORM */
 .panel {
@@ -40,6 +43,10 @@ h1 {
   padding: 20px;
 }
 
+#toppingSelect {
+  font-size: 16px;
+}
+
 .pizzaSize {
   display: flex;
   flex-direction: row;
@@ -57,10 +64,10 @@ h1 {
 
 .pizzaSize:hover {
   opacity: 0.8;
+  transition: 0.05s;
 }
 
 .pizzaSize img {
-  border: 1px solid black;
   border-radius: 5px;
   height: 60px;
   width: auto;
@@ -77,14 +84,20 @@ h1 {
 }
 
 .selected {
-  border: 4px solid black;
+  -webkit-box-shadow: inset 1px 1px 15px 0px rgba(0,0,0,0.57); 
+  box-shadow: inset 1px 1px 15px 0px rgba(0,0,0,0.57);
+  transition: 0.05s;
+}
+
+.panel button, .pizzaSize h4 {
+  font-weight: bold;
 }
 
 /* PIZZAS */
 .pizza {
   background-color: white;
   text-align: left;
-  padding: 20px;
+  padding: 20px 20px 20px 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -96,15 +109,35 @@ h1 {
   font-size: 25px;
 }
 
-.pizza img {
-  border: 1px solid black;
+.pizzaImgDiv {
+  width: 30%;
+  margin: auto 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pizzaImgDiv img {
   border-radius: 5px;
+  margin: auto;
+}
+
+.pizza img#Mercury {
+  height: 35px;
+}
+
+.pizza img#Earth {
+  height: 75px;
+}
+
+.pizza img#Mars {
+  height: 120px;
 }
 
 .pizza .pizzaInfo {
   font-size: 18px;
-  margin: 0 20px;
-  width: 80%;
+  margin: 0 auto;
+  width: 50%;
 }
 
 .pizza .buttons {
@@ -112,13 +145,42 @@ h1 {
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-end;
+  width: 20%;
 }
 
 #purchaseButton {
   display: none;
 }
 
+#pizzas button {
+  font-weight: bold;
+  font-size: 15px;
+}
+
+button#purchaseButton {
+  font-weight: bold;
+}
+
 /* RECEIPT */
 #receipt {
   display: none;
+}
+
+#receiptInfo {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  margin: 0 auto 20px auto;
+}
+
+#receipt h3 {
+  font-weight: bold;
+}
+
+#receipt p {
+  font-size: 20px;
+}
+
+#receipt button {
+  font-weight: bold;
 }
