--- a/css/styles.css
+++ b/css/styles.css
@@ -21,11 +21,36 @@ h1 {
   font-size: 50px;
 }
 
+h1 img {
+  height: 60px;
+  width: auto;
+  margin: 0 10px;
+}
+
+h2 {
+  font-weight: bold;
+  margin-left: 40px;
+}
+
 /* PIZZA ORDER FORM */
 .panel {
   padding: 20px;
   margin: 0;
   margin-bottom: 20px;
+}
+
+#heading button {
+  float: right;
+  width: 40px;
+  height: 40px;
+  margin: 0;
+}
+
+#heading button img {
+  margin: 0;
+  padding: 0;
+  width: 25px;
+  height: auto;
 }
 
 #choices {
@@ -91,6 +116,12 @@ h1 {
 
 .panel button, .pizzaSize h4 {
   font-weight: bold;
+}
+
+.panel button img {
+  height: 30px;
+  width: auto;
+  margin: 0 5px;
 }
 
 /* PIZZAS */
