--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,13 @@ body {
   background-color: black;
   text-align: center;
   font-family: 'Roboto', sans-serif;
-  padding: 20px;
   background-image: url("../img/background.png");
 }
 
 .container {
-  width: 50%;
+  width: 100%;
+  min-height: 100vh;
+  position: relative;
 }
 
 h1, h2, h3, h4, h5 {
@@ -16,7 +17,7 @@ h1, h2, h3, h4, h5 {
 
 h1 {
   color: white;
-  margin: 0 0 20px 0;
+  margin: 20px 0 20px 0;
   font-weight: bold;
   font-size: 50px;
 }
@@ -231,4 +232,109 @@ button#purchaseButton {
   background-color: #555;
   color: white;
   transition: 0.1s;
+}
+
+/* Footer */
+footer {
+  padding: 10px;
+  background-color: white;
+  font-size: 17px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 4.5rem; 
+}
+
+#content-wrap {
+  padding-bottom: 7rem;
+  width: 50%;
+  margin: auto;
+}
+
+/* MEDIA QUERIES */
+@media screen and (max-width: 1230px) {
+  #content-wrap {
+    width: 70%;
+  }
+}
+@media screen and (max-width: 910px) {
+  #content-wrap {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 700px) {
+  #content-wrap {
+    width: 100%;
+  }
+  #choices {
+    flex-direction: column;
+  }
+  #toppingSelect, #sizeSelect {
+    margin: 10px 0;
+    width: 100%;
+  }
+  .pizza h5 {
+    font-size: 16px;
+  }
+  .pizza p {
+    font-size: 14px;
+  }
+  #pizzas button {
+    font-weight: bold;
+    font-size: 10px;
+    padding: 3px 8px;
+  }
+  .pizzaSize:hover {
+    opacity: 1;
+    transition: 0.05s;
+  }
+  h1 {
+    margin-top: 20px;
+  }
+  body {
+    padding: 0;
+  }
+}
+@media screen and (max-width: 550px) {
+  .pizza img#Mercury {
+    height: 20px;
+  }
+  
+  .pizza img#Earth {
+    height: 40px;
+  }
+  
+  .pizza img#Mars {
+    height: 70px;
+  }
+}
+@media screen and (max-width: 460px) {
+  h1 {
+    font-size: 30px;
+  }
+  h2 {
+    font-size: 25px;
+    text-align: left;
+    margin: 0;
+  }
+  h1 img {
+    height: 30px;
+    width: auto;
+  }
+  h3 {
+    font-size: 20px;
+    font-weight: bold;
+  }
+  #heading button {
+    height: 30px;
+    width: 30px;
+  }
+  #heading button img {
+    height: 15px;
+    width: auto;
+  }
+  #toppingSelect {
+    font-size: 20px;
+  }
 }
